--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.63
 loader_version=0.12.4
 # Mod Properties
-mod_version=1.0
+mod_version=1.17.1-rv1
 maven_group=com.mattworzala
 archives_base_name=debug_renderer
 # Dependencies
