--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.63
-loader_version=0.12.4
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.11
+loader_version=0.12.12
 # Mod Properties
-mod_version=1.17.1-rv1
+mod_version=1.18.1
 maven_group=com.mattworzala
 archives_base_name=debug_renderer
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.41.3+1.17
+fabric_version=0.45.0+1.18
