send message on join

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.11
 loader_version=0.12.12
 # Mod Properties
-mod_version=1.18.1
+mod_version=1.18.1-rv1
 maven_group=com.mattworzala
 archives_base_name=debug_renderer
 # Dependencies
