--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.2
-loader_version=0.13.3
+minecraft_version=1.19.1-rc1
+yarn_mappings=1.19.1-rc1+build.4
+loader_version=0.14.8
 # Mod Properties
-mod_version=1.18.2-rv1
+mod_version=1.19-rv1
 maven_group=com.mattworzala
 archives_base_name=debug_renderer
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.50.0+1.18.2
+fabric_version=0.57.0+1.19
