--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.1-rc1
-yarn_mappings=1.19.1-rc1+build.4
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
 loader_version=0.14.8
 # Mod Properties
 mod_version=1.19-rv1
