--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
-loader_version=0.15.3
+loader_version=0.15.7
 # Mod Properties
-mod_version=1.20.4
+mod_version=1.20.4-rv1
 maven_group=com.mattworzala
 archives_base_name=debug_renderer
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.91.3+1.20.4
+fabric_version=0.96.11+1.20.4
